Fix spacing in header

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,10 @@ body {
 }
 
 .left-content {
-    width: 40%;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 25px;
 }
 
 button {
@@ -121,6 +123,11 @@ img {
     width: 1000px;
     border-radius: 10px;
     padding: 50px;
+}
+
+.modal-container-two {
+    display: flex;
+    flex-direction: column;
 }
 
 .modal-header {
